--- a/overview.ipynb
+++ b/overview.ipynb
@@ -27,19 +27,22 @@
     "    DENSITY_VARIATION_FOLDER,\n",
     "    V_FLOW_VARIATION_FOLDER,\n",
     "    FOLDER_1D,\n",
+    "    FOLDER_2D,\n",
     "    MPLSTYLE_FILE\n",
     ")\n",
     "from basic import (\n",
     "    physics,\n",
     "    Species,\n",
     "    SpeciesInfo,\n",
-    "    RunInfo\n",
+    "    RunInfo,\n",
+    "    Distribution\n",
     ")\n",
     "\n",
     "from plots import (\n",
     "    settings,\n",
     "    plots_1D,\n",
     "    plots_2D,\n",
+    "    general,\n",
     ")\n",
     "\n",
     "info = RunInfo(\n",
@@ -68,7 +71,7 @@
     "\n",
     "save=False\n",
     "plt.style.use(MPLSTYLE_FILE)\n",
-    "matplotlib.rcParams['figure.dpi'] = settings.FIGURE_DPI"
+    "matplotlib.rcParams['figure.dpi'] = 100"
    ]
   },
   {
@@ -91,9 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots_2D.maxEnergyVsAlphaFlowSpeed(info)\n",
+    "plots_2D.maxEnergyVsAlphaFlowSpeed(info, normalize_energy=False)\n",
     "plt.show()\n",
-    "plots_2D.maxEnergyNormalizedVsAlphaFlowSpeed(info)\n",
+    "plots_2D.maxEnergyVsAlphaFlowSpeed(info, normalize_energy=True)\n",
     "plt.show()"
    ]
   },
@@ -143,6 +146,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "species = Species.ELECTRON\n",
+    "plt.style.use(MPLSTYLE_FILE)\n",
+    "plt.figure()\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    v = int(filename.stem[-3:])\n",
+    "    if v not in [100, 140]:\n",
+    "        continue\n",
+    "    with h5py.File(filename) as f:\n",
+    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
+    "        temp = np.mean(f[f\"Derived/Temperature/{species.value}\"], axis=(1,2))\n",
+    "    plt.plot(\n",
+    "        time, physics.kelvinToElectronVolt(temp),\n",
+    "        label=f\"$u_\\\\alpha^{{t=0}}$ = {v}\"\n",
+    "    )\n",
+    "\n",
+    "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_By\").glob(\"*.h5\")):\n",
+    "    v = int(filename.stem[-3:])\n",
+    "\n",
+    "    with h5py.File(filename) as f:\n",
+    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
+    "        temp = np.mean(f[f\"Derived/Temperature/{species.value}\"], axis=(1,2))\n",
+    "    plt.plot(\n",
+    "        time, physics.kelvinToElectronVolt(temp),\n",
+    "        label=f\"($B_y>0$) $u_\\\\alpha^{{t=0}}$ = {v}\"\n",
+    "    )\n",
+    "\n",
+    "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_Bx_By\").glob(\"*.h5\")):\n",
+    "    v = int(filename.stem[-3:])\n",
+    "\n",
+    "    with h5py.File(filename) as f:\n",
+    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
+    "        temp = np.mean(f[f\"Derived/Temperature/{species.value}\"], axis=(1,2))\n",
+    "    plt.plot(\n",
+    "        time, physics.kelvinToElectronVolt(temp),\n",
+    "        label=f\"($B_x=B_y$) $u_\\\\alpha^{{t=0}}$ = {v}\"\n",
+    "    )\n",
+    "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_Bx\").glob(\"*.h5\")):\n",
+    "    v = int(filename.stem[-3:])\n",
+    "\n",
+    "    with h5py.File(filename) as f:\n",
+    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
+    "        temp = np.mean(f[f\"Derived/Temperature/{species.value}\"], axis=(1,2))\n",
+    "    plt.plot(\n",
+    "        time, physics.kelvinToElectronVolt(temp),\n",
+    "        label=f\"($B_x>0$) $u_\\\\alpha^{{t=0}}$ = {v}\"\n",
+    "    )\n",
+    "plt.legend(title=\"Flow velocity (km$\\\\,/\\\\,$s)\")\n",
+    "plt.xlabel(\"Time $t\\\\,\\\\omega_{pp}$ (1)\")\n",
+    "plt.ylabel(f\"Temperature $T_{species.symbol()}$ (eV)\")\n",
+    "plt.xlim(0, 150.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for species in Species:\n",
     "    plots_2D.temperature3DOverTimeForAlphaFlowSpeed(\n",
     "        info, species\n",
@@ -166,8 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data_file in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
-    "    plots_2D.electricField2DSnapshot(data_file, info, time=50.0)\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    plots_2D.electricField2DSnapshot(filename, info, time=50.0)\n",
     "    plt.show()"
    ]
   },
@@ -177,8 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data_file in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
-    "    plots_2D.energyEFieldOverTime(data_file, info)\n",
+    "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_By\").glob(\"*.h5\")):\n",
+    "    plots_2D.electricField2DSnapshot(filename, info, time=50.0)\n",
     "    plt.show()"
    ]
   },
@@ -188,10 +249,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data_file in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
-    "    plots_2D.strengthBFieldOverTime(data_file, info)\n",
-    "    plots_2D.psdBField(data_file, info)\n",
-    "    plots_2D.energyBField(data_file, info)\n",
+    "files = sorted((FOLDER_2D / \"v_alpha_bulk_variation_Bx_By\").glob(\"*.h5\"))\n",
+    "arr_theta = np.empty(len(files))\n",
+    "arr_theta_err = np.empty(len(files))\n",
+    "arr_theta_E = np.empty(len(files))\n",
+    "arr_theta_E_err = np.empty(len(files))\n",
+    "flow_velocity = np.empty(len(files))\n",
+    "for file_idx, filename in enumerate(files):\n",
+    "    flow_velocity[file_idx] = int(filename.stem[-3:])\n",
+    "    with h5py.File(filename) as f:\n",
+    "        x = f[\"Grid/x_px/Alphas/X\"][0] / info.lambda_D\n",
+    "        y = f[\"Grid/y_px/Alphas/Y\"][0] / info.lambda_D\n",
+    "        E_x = f['Electric Field/ex'][:]\n",
+    "        E_y = f['Electric Field/ey'][:]\n",
+    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
+    "\n",
+    "        print(f.keys())\n",
+    "        break\n",
+    "    res = analysis.fitGrowthRate(time, np.mean(E_x ** 2 + E_y ** 2, axis=(1,2)))\n",
+    "    assert res is not None, \"What?\"\n",
+    "    linear_idx = res[1]\n",
+    "    E_field = E_x[slice(*linear_idx)]\n",
+    "    k, k_err = analysis.waveVector2D(x, y, E_field)\n",
+    "    print(k, k_err)\n",
+    "    print(f\"v = {flow_velocity[file_idx]} :: |k| = {np.linalg.norm(k):.4f}\")\n",
+    "    arr_theta[file_idx], arr_theta_err[file_idx] = analysis.waveAngle2DFromWaveVector(k, k_err)\n",
+    "\n",
+    "print(arr_theta * 180 / np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_Bx_By\").glob(\"*.h5\")):\n",
+    "    plots_2D.energyEFieldOverTime(filename, info)\n",
     "    plt.show()"
    ]
   },
@@ -201,7 +295,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for species in Species:\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    plots_2D.strengthBFieldOverTime(filename, info)\n",
+    "    plots_2D.psdBField(filename, info)\n",
+    "    plots_2D.energyBField(filename, info)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for species in [Species.ELECTRON]:\n",
     "    plots_2D.psdFlowVelocity(info, species, \"x\", \"x\")\n",
     "    plt.show()"
    ]
@@ -223,43 +330,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "for data_file in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
-    "    plt.figure()\n",
-    "    for species in Species:\n",
-    "        u_alpha = int(data_file.stem[-3:])\n",
-    "        with h5py.File(data_file) as f:\n",
-    "            time = f[\"Header/time\"][:] * info.omega_pp\n",
-    "            x_grid = f[f\"Grid/x_px/{species.value}/X\"][:]\n",
-    "            px_grid = f[f\"Grid/x_px/{species.value}/Px\"][:]\n",
-    "            py_grid = f[f\"Grid/x_py/{species.value}/Py\"][:]\n",
-    "            dist_x_px = f[f'dist_fn/x_px/{species.value}'][:]\n",
-    "            dist_x_py = f[f\"dist_fn/x_py/{species.value}\"][:]\n",
-    "            T = f[f\"Derived/Temperature/{species.value}\"][:]\n",
-    "        u_x = analysis.flowVelocity1D(x_grid, px_grid, dist_x_px, info[species])\n",
-    "        u_y = analysis.flowVelocity1D(x_grid, py_grid, dist_x_py, info[species])\n",
-    "        K = 0.5 * info[species].si_mass * np.mean(u_x ** 2 + u_y ** 2, axis=1) / constants.electron_volt\n",
-    "        U = 3 / 2 * physics.kelvinToElectronVolt(np.mean(T, axis=(1,2)))\n",
-    "        W_species = info[species].number_density * (K + U)\n",
-    "        plt.plot(time, (W_species - W_species[0]) * 1e-6, label=f\"$W_{{{species.symbol()}}}$\")\n",
-    "    with h5py.File(data_file) as f:\n",
-    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
-    "        E_x = f['Electric Field/ex'][:]\n",
-    "        E_y = f['Electric Field/ey'][:]\n",
-    "    W_E = np.mean(E_x ** 2 + E_y ** 2, axis=(1,2)) * (constants.epsilon_0 / 2) / constants.electron_volt\n",
-    "    plt.plot(time[1:], (W_E[1:] - W_E[1]) * 1e-6, label=\"$W_E$\")\n",
-    "    # plt.yscale(\"log\")\n",
-    "    plt.xlabel(\"Time $t\\\\,\\\\omega_{pp}$ (1)\")\n",
-    "    plt.ylabel(\"Energy density W (MeV$\\\\,/\\\\,$m$^3$)\")\n",
-    "    plt.legend()\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    plots_2D.energiesOverTime(filename, info)\n",
     "    plt.show()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Videos of distribution"
+    "# Kinetic energies in the system\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    plt.figure()\n",
+    "    K_species = []\n",
+    "    for species in [Species.ALPHA]:\n",
+    "        u_alpha = int(filename.stem[-3:])\n",
+    "        with h5py.File(filename) as f:\n",
+    "            time = f[\"Header/time\"][:] * info.omega_pp\n",
+    "            x_grid = f[f\"Grid/grid/X\"][:]\n",
+    "            y_grid = f[f\"Grid/grid/Y\"][:]\n",
+    "            px_grid = f[f\"Grid/px_py/{species.value}/Px\"][:]\n",
+    "            py_grid = f[f\"Grid/px_py/{species.value}/Py\"][:]\n",
+    "            px_py = f[f'dist_fn/px_py/{species.value}'][:]\n",
+    "        # TODO: Wrong\n",
+    "        u_x, u_y = analysis.flowVelocity2D(x_grid, y_grid, px_grid, py_grid, px_py, info[species])\n",
+    "        print(np.sum(u_x, axis=1))\n",
+    "        K = 0.5 * info[species].si_mass * np.mean(u_x ** 2 + u_y ** 2, axis=1) / constants.electron_volt\n",
+    "        K_species.append(info[species].number_density * K)\n",
+    "    for K_s, species in zip(K_species, Species):\n",
+    "        plt.plot(time, K_s * 1e-6, label=f\"$W_{{{species.symbol()}}}$\")\n",
+    "    # plt.plot(time[1:], W_total[1:] * 1e-6, label=\"$W_\\\\text{total}$\")\n",
+    "    plt.yscale(\"log\")\n",
+    "    plt.xlabel(\"Time $t\\\\,\\\\omega_{pp}$ (1)\")\n",
+    "    plt.ylabel(\"Kinetic energy density K (MeV$\\\\,/\\\\,$m$^3$)\")\n",
+    "    plt.xlim(0.0, 150.0)\n",
+    "    plt.legend(ncols=3, labelspacing=.2, columnspacing=0.5)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -268,54 +376,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from scipy import ndimage\n",
-    "data_file = RESULTS_FOLDER / \"epoch_2D/v_alpha_bulk_variation/v_alpha_bulk_106.h5\"\n",
-    "with h5py.File(data_file) as f:\n",
-    "    time = f[\"Header/time\"][:] * info.omega_pp\n",
-    "    x_grid = f[\"Grid/grid/X\"][:]\n",
-    "    y_grid = f[\"Grid/grid/Y\"][:]\n",
-    "    px_grid = f[\"Grid/px_py/Protons/Px\"][:]\n",
-    "    py_grid = f[\"Grid/px_py/Protons/Py\"][:]\n",
-    "    dist_p_grid = f['dist_fn/px_py/Protons'][:]\n",
-    "    print(f['dist_fn/px_py/Protons'].attrs[\"units\"])\n",
-    "# plt.imshow(full_dist.T, norm=\"log\")\n",
-    "# plt.colorbar()\n",
-    "# plt.contour(ndimage.gaussian_filter(full_dist.T, sigma=4.0, order=0), levels=10 ** np.linspace(5.5, 7.8, 4), colors=\"black\", linewidths=2, linestyles=\":\")\n",
-    "# plt.show()\n",
-    "v_x = px_grid / (info.proton.mass * constants.electron_mass)\n",
-    "v_y = py_grid / (info.proton.mass * constants.electron_mass)\n",
-    "dv_x = v_x[1] - v_x[0]\n",
-    "dv_y = v_y[1] - v_y[0]\n",
-    "length_x = abs(x_grid[-1] - x_grid[0])\n",
-    "length_y = abs(y_grid[-1] - y_grid[0])\n",
-    "f = dist_p_grid / (dv_x * dv_y * length_x * length_y) # s^2/m^4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dist = np.trapezoid(y=f, x=v_y, axis=2)\n",
-    "fig = plt.figure()\n",
-    "line = plt.plot(v_x * 1e-3, dist[-1], color=\"black\", lw=3)[0]\n",
-    "text = plt.text(0.72, 0.9, s=f\"t$\\\\,=\\\\,${time[0]:>5.1f}\", transform=plt.gca().transAxes)\n",
-    "plt.yscale(\"log\")\n",
-    "plt.xlabel(\"Velocity $v_{\\\\alpha,x}$ (km/s)\")\n",
-    "plt.ylabel(\"$\\\\langle f_\\\\alpha\\\\rangle_\\\\mathbf{x}$ (s/m$^3$)\")\n",
-    "# plt.xlim(0, 400)\n",
-    "# plt.xlim(-100, 100)\n",
-    "# plt.xlim(0, 300)\n",
-    "# plt.ylim(1e-3, 4e1)\n",
-    "\n",
-    "def update(frame_idx):\n",
-    "    line.set_ydata(dist[2 * frame_idx])\n",
-    "    text.set_text(f\"t$\\\\,\\\\omega_{{pp}}\\\\,=\\\\,${time[2 * frame_idx]:>5.1f}\")\n",
-    "    return (line, text,)\n",
-    "\n",
-    "# ani = animation.FuncAnimation(fig=fig, func=update, frames=range(150, 500))\n",
-    "# ani.save(filename=\"figures/distribution_vx_alpha=180.mp4\", writer=\"ffmpeg\", fps=60)\n",
+    "species = Species.PROTON\n",
+    "files = sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\"))\n",
+    "labels = [int(p.stem[-3:]) for p in files]\n",
+    "general.momentumDistributionComparison(\n",
+    "    info, species, Distribution.Y_PX, legend_ncols=2,\n",
+    "    files=files, labels=labels, times=150.0, legend_title=f\"Flow velocity $u_\\\\alpha$ (km/s)\")\n",
     "plt.show()"
    ]
   },
@@ -325,30 +391,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist = dist_p_grid / (dx * dy)\n",
-    "dist[dist <= 0] = np.min(dist[dist>0])\n",
-    "vx_bounds = np.min(v_x) + np.arange(v_x.size + 1) * dv_x - dv_x / 2\n",
-    "vy_bounds = np.min(v_y) + np.arange(v_y.size + 1) * dv_y - dv_y / 2\n",
-    "fig = plt.figure()\n",
-    "# plt.imshow(dist[0].T)\n",
-    "quad = plt.pcolormesh(vx_bounds * 1e-3, vy_bounds * 1e-3, dist[0].T, norm=\"log\")\n",
-    "plt.colorbar(label=\"# particles / meter (1/m$^2$)\")\n",
-    "text = plt.text(130, 80, s=f\"t$\\\\,\\\\omega_{{pp}}\\\\,=\\\\,${time[0]:>5.1f}\")\n",
-    "plt.xlabel(\"Velocity $v_{\\\\alpha,x}$ (km/s)\")\n",
-    "plt.ylabel(\"Velocity $v_{\\\\alpha,y}$ (km/s)\")\n",
-    "plt.xlim(0, 200)\n",
-    "plt.ylim(-100, 100)\n",
-    "plt.yticks(np.linspace(-100, 100, 5))\n",
-    "# plt.ylim(1e6, 5e9)\n",
-    "\n",
-    "def update(frame_idx):\n",
-    "    quad.set_array(dist[2 * frame_idx].T)\n",
-    "    text.set_text(f\"t$\\\\,\\\\omega_{{pp}}\\\\,=\\\\,${time[2 * frame_idx]:>5.1f}\")\n",
-    "    return (quad, text,)\n",
-    "\n",
-    "ani = animation.FuncAnimation(fig=fig, func=update, frames=range(150, 500))\n",
-    "ani.save(filename=\"figures/distribution_vx_vy_alpha.mp4\", writer=\"ffmpeg\", fps=60)\n",
+    "# TODO: Test with (FOLDER_2D / \"v_alpha_bulk_variation_Bx_By\") (varying momentum limits)\n",
+    "times = [0.0, 40.0, 50, 60.0, 150.0]\n",
+    "species = Species.PROTON\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    general.momentumDistributionComparison(info, species, Distribution.Y_PX, filename, times)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "species = Species.ALPHA\n",
+    "dist = Distribution.X_PX\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    general.spaceMomentumDistributon(info, species, dist, filename, time=50.0)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "species = Species.PROTON\n",
+    "time = 150.0\n",
+    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
+    "    plots_2D.pxPyDistribution(info, species, filename, time)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\"))[2]\n",
+    "plots_2D.videoEFieldOverTime(info, filename, \"x\", save=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\"))\n",
+    "species = Species.PROTON\n",
+    "normalized_velocity = True\n",
+    "time_steps = range(0, 1500, 20)\n",
+    "labels = [int(p.stem[-3:]) for p in filenames]\n",
+    "legend_title=f\"Flow velocity $u_\\\\alpha$ (km/s)\"\n",
+    "general.videoMomentumDistribution(\n",
+    "    info, Distribution.X_PX, species, filenames,\n",
+    "    save=True, labels=labels, legend_title=legend_title,\n",
+    "    legend_ncols=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = RESULTS_FOLDER / \"epoch_2D/v_alpha_bulk_variation/v_alpha_bulk_106.h5\"\n",
+    "plots_2D.videoPxPyDistribution(info, species=Species.PROTON, filename=filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = RESULTS_FOLDER / \"epoch_2D/v_alpha_bulk_variation/v_alpha_bulk_106.h5\"\n",
+    "v_x, v_y, f_v = general._loadPxPyDistribution(info, Species.PROTON, filename, 100, True)\n",
+    "f_v[f_v<=0] = np.min(f_v[f_v>0])\n",
+    "from scipy import ndimage\n",
+    "plt.contourf(np.log(ndimage.gaussian_filter(f_v, sigma=10)))\n",
+    "plt.gca().set_aspect(\"equal\")"
    ]
   },
   {
@@ -401,7 +527,7 @@
     "        )\n",
     "    )\n",
     "    plots_1D.energyEFieldOverTime(\n",
-    "        data_file=filename, info=info\n",
+    "        filename=filename, info=info\n",
     "    )\n",
     "    plt.show()"
    ]
@@ -420,7 +546,7 @@
    "outputs": [],
    "source": [
     "plots_1D.electricFieldOverSpaceAndTime(\n",
-    "    data_file=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
+    "    filename=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
     "    info=info, save=False\n",
     ")\n",
     "plt.show()"
@@ -433,7 +559,7 @@
    "outputs": [],
    "source": [
     "plots_1D.averageTemperature3DOverTime(\n",
-    "    data_file=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
+    "    filename=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
     "    info=info, save=save\n",
     ")\n",
     "plt.show()"
@@ -447,7 +573,7 @@
    "source": [
     "for s in Species:\n",
     "    plots_1D.velocityDistributionOverTime(\n",
-    "        data_file=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
+    "        filename=PARTICLE_VARIATION_FOLDER / \"particles_4192/rep_0.h5\", #FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
     "        info=info, species=s, save=save\n",
     "    )\n",
     "plt.show()"
@@ -460,7 +586,7 @@
    "outputs": [],
    "source": [
     "plots_1D.energyEFieldOverTime(\n",
-    "    data_file=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
+    "    filename=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
     "    info=info, save=save\n",
     ")\n",
     "plt.show()"
