More plots, dispersion calculations

--- a/overview.ipynb
+++ b/overview.ipynb
@@ -13,7 +13,8 @@
     "\n",
     "import h5py\n",
     "import numpy as np\n",
-    "from scipy import constants, signal, stats, optimize\n",
+    "from scipy import constants, signal, stats, optimize, integrate\n",
+    "from functools import partial\n",
     "import matplotlib\n",
     "import matplotlib.animation as animation\n",
     "import matplotlib.pyplot as plt\n",
@@ -69,9 +70,190 @@
     "    )\n",
     ")\n",
     "\n",
-    "save=True\n",
+    "save=False\n",
     "plt.style.use(MPLSTYLE_FILE)\n",
     "matplotlib.rcParams['figure.dpi'] = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import special, integrate\n",
+    "def distr_integral(u_alpha, w, m, T):\n",
+    "    c_s = info.c_s\n",
+    "    k = constants.k\n",
+    "    if u_alpha < c_s:\n",
+    "        theta = 0\n",
+    "    else:\n",
+    "        theta = np.arccos(c_s / u_alpha)\n",
+    "    if theta < 1e-15:\n",
+    "        integral_band = special.erf(w * np.sqrt(m / (8 * k * T)))\n",
+    "        return integral_band\n",
+    "    f_geom = w / np.sin(theta)\n",
+    "    e_geom = w / np.cos(theta)\n",
+    "\n",
+    "    integral_band = special.erf(w * np.sqrt(m / (8 * k * T)))\n",
+    "    integral_triangle, _ = integrate.quad(\n",
+    "        func=lambda v_x: np.exp(- m * v_x ** 2 / (2 * k * T)) * \\\n",
+    "        special.erf((f_geom * (e_geom - 2 * v_x)) / (np.sqrt(8 * k * T / m) * e_geom)) / \\\n",
+    "        np.sqrt(8 * np.pi * k * T / m),\n",
+    "        a=0, b=e_geom / 2\n",
+    "    )\n",
+    "    return 2 * integral_band - 4 * integral_triangle\n",
+    "wave_length = 0.5 * 2 * np.pi * info.lambda_D / 0.7\n",
+    "interaction_width = np.sqrt(\n",
+    "    2 * constants.elementary_charge * 0.8 * wave_length / info.proton.si_mass\n",
+    ")\n",
+    "x = np.linspace(1e5, 2e5, num=1000)\n",
+    "y = np.array([\n",
+    "    distr_integral(u_alpha, w=interaction_width, m=info.alpha.si_mass, T=info.alpha.si_temperature) for u_alpha in x\n",
+    "])\n",
+    "plt.plot(x * 1e-3, y)\n",
+    "plt.xlabel(\"Initial flow velocity $u_\\\\alpha$ (km$\\\\,/\\\\,$s)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distributionFunction1D(v: float, u: float, n: float, T: float, m: float) -> float:\n",
+    "    from scipy.constants import pi, k\n",
+    "    return np.sqrt(n * m / (2 * pi * k * T)) * np.exp(- m * (v - u) ** 2 / (2 * k * T))\n",
+    "\n",
+    "def beamParameterization(\n",
+    "    s: float, t: float, theta: float, omega: float, k: float\n",
+    ") -> tuple[float,float,float]:\n",
+    "    v_x = omega / k * ((1 + t) * np.cos(theta) + s * np.sin(theta))\n",
+    "    v_y = omega / k * ((1 + t) * np.sin(theta) - s * np.cos(theta))\n",
+    "    sqrt_g = omega / k\n",
+    "    return sqrt_g, v_x, v_y\n",
+    "\n",
+    "def energyIntegrant(\n",
+    "    s: float, t: float, m: float, theta: float, omega: float, k: float,\n",
+    ") -> float:\n",
+    "    sqrt_g, v_x, v_y = beamParameterization(s, t, theta, omega, k)\n",
+    "    return sqrt_g * (m / 2) * (v_x ** 2 + v_y ** 2)\n",
+    "\n",
+    "def waveIntegrant(s: float, t: float,\n",
+    "    theta: float, omega: float, k: float,\n",
+    "    u_x: float, n: float, T: float, m: float,\n",
+    "):\n",
+    "    sqrt_g, v_x, v_y = beamParameterization(s, t, theta, omega, k)\n",
+    "    return sqrt_g * (\n",
+    "        distributionFunction1D(v_x, u_x, n, T, m) *\n",
+    "        distributionFunction1D(v_y, 0.0, n, T, m)\n",
+    "    )\n",
+    "\n",
+    "def waveEnergyIntegrant(\n",
+    "    s: float, t: float,\n",
+    "    theta: float, omega: float, k: float,\n",
+    "    u_x: float, n: float, T: float, m: float,\n",
+    ") -> float:\n",
+    "    sqrt_g, v_x, v_y = beamParameterization(s, t, theta, omega, k)\n",
+    "    return sqrt_g * (\n",
+    "        (m / 2) * (v_x ** 2 + v_y ** 2) *\n",
+    "        distributionFunction1D(v_x, u_x, n, T, m) *\n",
+    "        distributionFunction1D(v_y, 0.0, n, T, m)\n",
+    "    )\n",
+    "\n",
+    "def integrateComposite(species: Species, u_alpha, theta, omega_max, k_max, interaction_width):\n",
+    "    s_info = info[species]\n",
+    "    func = partial(\n",
+    "        waveEnergyIntegrant,\n",
+    "        theta=theta, omega=omega_max, k=k_max,\n",
+    "        u_x=u_alpha if species == Species.ALPHA else 0.0,\n",
+    "        n=s_info.number_density,\n",
+    "        T=s_info.si_temperature,\n",
+    "        m=s_info.si_mass,\n",
+    "    )\n",
+    "    res, err = integrate.dblquad(func,\n",
+    "        a=-(k_max / omega_max) * interaction_width / 2, b=(k_max / omega_max) * interaction_width / 2,\n",
+    "        gfun=-np.inf, hfun=np.inf, epsabs=1e-20, epsrel=1e-12\n",
+    "    )\n",
+    "    return res, err\n",
+    "\n",
+    "def integrateSeparate(species: Species, u_alpha, theta, omega_max, k_max, interaction_width):\n",
+    "    s_info = info[species]\n",
+    "    func_energy = partial(\n",
+    "        energyIntegrant,\n",
+    "        m=s_info.si_mass,\n",
+    "        theta=theta,\n",
+    "        omega=omega_max,\n",
+    "        k=k_max,\n",
+    "    )\n",
+    "    func_wave = partial(\n",
+    "        waveIntegrant,\n",
+    "        theta=theta, omega=omega_max, k=k_max,\n",
+    "        u_x=u_alpha if species == Species.ALPHA else 0.0,\n",
+    "        n=s_info.number_density,\n",
+    "        T=s_info.si_temperature,\n",
+    "        m=s_info.si_mass,\n",
+    "    )\n",
+    "    def _integrant(s):\n",
+    "        f_e = lambda t: func_energy(s=s, t=t)\n",
+    "        f_w = lambda t: func_wave(s=s, t=t)\n",
+    "        return (\n",
+    "            integrate.quad(f_e,\n",
+    "                a=-(k_max / omega_max) * interaction_width / 2,\n",
+    "                b=(k_max / omega_max) * interaction_width / 2,\n",
+    "                epsabs=1e-20, epsrel=1e-12)[0] *\n",
+    "            integrate.quad(f_w,\n",
+    "                a=-(k_max / omega_max) * interaction_width / 2,\n",
+    "                b=(k_max / omega_max) * interaction_width / 2,\n",
+    "                epsabs=1e-20, epsrel=1e-12)[0]\n",
+    "        ) / interaction_width\n",
+    "\n",
+    "    res, err = integrate.quad(_integrant, a=-np.inf, b=np.inf, epsabs=1e-20, epsrel=1e-12)\n",
+    "    return res, err\n",
+    "\n",
+    "# assumption based on the videos, picked at random\n",
+    "interaction_width = 2 * info.alpha.v_thermal\n",
+    "with h5py.File(\"theory_u_alpha_dispersion.h5\") as f:\n",
+    "    u_alpha_arr = f[\"u_alpha_bulk\"][:]\n",
+    "    theta_arr = f[\"theta_max\"][:]\n",
+    "    k_max_arr = f[\"k_max\"][:]\n",
+    "    omega_max_arr = f[\"omega_max\"][:]\n",
+    "results = []\n",
+    "for u_alpha, theta, k_max, omega_max in zip(u_alpha_arr, theta_arr, k_max_arr, omega_max_arr):\n",
+    "    res_c, err = integrateComposite(Species.ALPHA, u_alpha, theta, omega_max, k_max, interaction_width)\n",
+    "    res_s, err = integrateSeparate(Species.ALPHA, u_alpha, theta, omega_max, k_max, interaction_width)\n",
+    "    results.append(res_c - res_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(\"theory_u_alpha_dispersion.h5\") as f:\n",
+    "    print(f.keys())\n",
+    "    u_alpha_arr = f[\"u_alpha_bulk\"][:]\n",
+    "    theta_arr = f[\"theta_max\"][:]\n",
+    "    k_max_arr = f[\"k_max\"][:]\n",
+    "    omega_max_arr = f[\"omega_max\"][:]\n",
+    "    gamma_max = f['gamma_max'][:]\n",
+    "plt.plot(u_alpha_arr * 1e-3, theta_arr * 180 / np.pi)\n",
+    "# plt.plot(u_alpha_arr * 1e-3, gamma_max / info.omega_pp)\n",
+    "plt.xlabel(\"Alpha flow velocity (km$\\\\,/\\\\,$s)\")\n",
+    "plt.ylabel(\"Angle $\\\\theta$ (deg)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(u_alpha_arr, results / u_alpha_arr ** 2)\n",
+    "plt.xlabel(\"Alpha flow velocity $u_\\\\alpha$\")\n",
+    "plt.ylabel(\"Integral\")"
    ]
   },
   {
@@ -144,65 +326,6 @@
     "print(info.omega_pp / omega_c_alpha)\n",
     "print(info.omega_pp / omega_c_proton)\n",
     "print(info.omega_pp / (10 * info.proton.si_charge / info.proton.si_mass))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "magnetic_field_strength / np.sqrt(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 / (magnetic_field_strength / np.sqrt(2)) ** 2 /(1 / (magnetic_field_strength) ** 2 )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy import special, integrate\n",
-    "def distr_integral(u_alpha, w, m, T):\n",
-    "    c_s = info.c_s\n",
-    "    k = constants.k\n",
-    "    if u_alpha < c_s:\n",
-    "        theta = 0\n",
-    "    else:\n",
-    "        theta = np.arccos(c_s / u_alpha)\n",
-    "    if theta < 1e-15:\n",
-    "        integral_band = special.erf(w * np.sqrt(m / (8 * k * T)))\n",
-    "        return integral_band\n",
-    "    f_geom = w / np.sin(theta)\n",
-    "    e_geom = w / np.cos(theta)\n",
-    "\n",
-    "    integral_band = special.erf(w * np.sqrt(m / (8 * k * T)))\n",
-    "    integral_triangle, _ = integrate.quad(\n",
-    "        func=lambda v_x: np.exp(- m * v_x ** 2 / (2 * k * T)) * \\\n",
-    "        special.erf((f_geom * (e_geom - 2 * v_x)) / (np.sqrt(8 * k * T / m) * e_geom)) / \\\n",
-    "        np.sqrt(8 * np.pi * k * T / m),\n",
-    "        a=0, b=e_geom / 2\n",
-    "    )\n",
-    "    return 2 * integral_band - 4 * integral_triangle\n",
-    "wave_length = 0.5 * 2 * np.pi * info.lambda_D / 0.7\n",
-    "interaction_width = np.sqrt(\n",
-    "    2 * constants.elementary_charge * 0.8 * wave_length / info.proton.si_mass\n",
-    ")\n",
-    "x = np.linspace(1e5, 2e5, num=1000)\n",
-    "y = np.array([\n",
-    "    distr_integral(u_alpha, w=interaction_width, m=info.alpha.si_mass, T=info.alpha.si_temperature) for u_alpha in x\n",
-    "])\n",
-    "plt.plot(x * 1e-3, y)\n",
-    "plt.xlabel(\"Initial flow velocity $u_\\\\alpha$ (km$\\\\,/\\\\,$s)\")\n",
-    "plt.show()"
    ]
   },
   {
@@ -296,8 +419,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots_2D.waveAngleVsAlphaFlowSpeed(info, \"x\", save=save)\n",
-    "plots_2D.simulatedAlphaFlowSpeed(info, \"x\", save=save)\n",
+    "plots_2D.waveAngleVsAlphaFlowSpeed(info, \"x\", save=False)\n",
+    "# plots_2D.simulatedAlphaFlowSpeed(info, \"x\", save=save)\n",
     "plt.show()"
    ]
   },
@@ -325,8 +448,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots_2D.psdOmegaForAlphaFlowSpeed(info, \"x\", save=save)\n",
-    "plots_2D.psdOmegaForAlphaFlowSpeed(info, \"y\", save=save)\n",
+    "plots_2D.psdOmegaForAlphaFlowSpeed(info, \"x\", save=False)\n",
+    "# plots_2D.psdOmegaForAlphaFlowSpeed(info, \"y\", save=False)\n",
     "plt.show()"
    ]
   },
@@ -386,7 +509,7 @@
     "y_low = 1.5 if species == Species.PROTON else 5\n",
     "plt.ylim(bottom=2 if species == Species.PROTON else 10 if species == Species.ALPHA else 99.7)\n",
     "plt.tight_layout(pad=0.2)\n",
-    "plt.savefig(f\"figures/svg/simulation-2D/magnetic-field-directions/temperature_{species}-vs-time.svg\", bbox_inches=\"tight\")\n",
+    "# plt.savefig(f\"figures/svg/simulation-2D/magnetic-field-directions/temperature_{species}-vs-time.svg\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -409,7 +532,7 @@
    "outputs": [],
    "source": [
     "for species in Species:\n",
-    "    plots_2D.temperatureDifferences3DVsAlphaFlowSpeed(info, species, save=save)\n",
+    "    plots_2D.temperatureDifferences3DVsAlphaFlowSpeed(info, species, save=True)\n",
     "plt.show()"
    ]
   },
@@ -433,39 +556,6 @@
     "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_By\").glob(\"*.h5\")):\n",
     "    plots_2D.electricField2DSnapshot(filename, info, time=50.0)\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = sorted((FOLDER_2D / \"v_alpha_bulk_variation_Bx_By\").glob(\"*.h5\"))\n",
-    "arr_theta = np.empty(len(files))\n",
-    "arr_theta_err = np.empty(len(files))\n",
-    "arr_theta_E = np.empty(len(files))\n",
-    "arr_theta_E_err = np.empty(len(files))\n",
-    "flow_velocity = np.empty(len(files))\n",
-    "for file_idx, filename in enumerate(files):\n",
-    "    flow_velocity[file_idx] = int(filename.stem[-3:])\n",
-    "    with h5py.File(filename) as f:\n",
-    "        x = f[\"Grid/x_px/Alphas/X\"][0] / info.lambda_D\n",
-    "        y = f[\"Grid/y_px/Alphas/Y\"][0] / info.lambda_D\n",
-    "        E_x = f['Electric Field/ex'][:]\n",
-    "        E_y = f['Electric Field/ey'][:]\n",
-    "        time = f[\"Header/time\"][:] * info.omega_pp\n",
-    "\n",
-    "    res = analysis.fitGrowthRate(time, np.mean(E_x ** 2 + E_y ** 2, axis=(1,2)))\n",
-    "    assert res is not None, \"What?\"\n",
-    "    linear_idx = res[1]\n",
-    "    E_field = E_x[slice(*linear_idx)]\n",
-    "    k, k_err = analysis.waveVector2D(x, y, E_field)\n",
-    "    print(k, k_err)\n",
-    "    print(f\"v = {flow_velocity[file_idx]} :: |k| = {np.linalg.norm(k):.4f}\")\n",
-    "    arr_theta[file_idx], arr_theta_err[file_idx] = analysis.waveAngle2DFromWaveVector(k, k_err)\n",
-    "\n",
-    "print(arr_theta * 180 / np.pi)"
    ]
   },
   {
@@ -531,30 +621,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
-    "    plt.figure()\n",
-    "    K_species = []\n",
-    "    for species in Species:\n",
-    "        u_alpha = int(filename.stem[-3:])\n",
-    "        with h5py.File(filename) as f:\n",
-    "            time = f[\"Header/time\"][:] * info.omega_pp\n",
-    "            x_grid = f[f\"Grid/grid/X\"][:]\n",
-    "            y_grid = f[f\"Grid/grid/Y\"][:]\n",
-    "            px_grid = f[f\"Grid/px_py/{species.value}/Px\"][:]\n",
-    "            py_grid = f[f\"Grid/px_py/{species.value}/Py\"][:]\n",
-    "            px_py = f[f'dist_fn/px_py/{species.value}'][:]\n",
-    "            print(f[f\"Derived/Temperature/{species}\"].keys())\n",
-    "        # TODO: Wrong\n",
-    "        u_x, u_y = analysis.flowVelocity2D(x_grid, y_grid, px_grid, py_grid, px_py, info[species])\n",
-    "        K = 0.5 * info[species].si_mass * (u_x ** 2 + u_y ** 2) / constants.electron_volt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Kinetic energies in the system\n",
     "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
     "    plt.figure()\n",
@@ -605,7 +671,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Test with (FOLDER_2D / \"v_alpha_bulk_variation_Bx_By\") (varying momentum limits)\n",
     "times = [0.0, 40.0, 50, 60.0, 150.0]\n",
     "species = Species.PROTON\n",
     "for filename in sorted((FOLDER_2D / \"v_alpha_bulk_variation_Bx\").glob(\"*.h5\")):\n",
@@ -624,7 +689,8 @@
     "dist = Distribution.X_PX\n",
     "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
     "    general.spaceMomentumDistributon(info, species, dist, filename, time=50.0)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    break"
    ]
   },
   {
@@ -666,7 +732,7 @@
     "legend_title=f\"Flow velocity $u_\\\\alpha$ (km/s)\"\n",
     "general.videoMomentumDistribution(\n",
     "    info, Distribution.X_PX, species, filenames,\n",
-    "    save=True, labels=labels, legend_title=legend_title,\n",
+    "    save=False, labels=labels, legend_title=legend_title,\n",
     "    legend_ncols=2)"
    ]
   },
@@ -677,11 +743,8 @@
    "outputs": [],
    "source": [
     "for filename in sorted(V_FLOW_VARIATION_FOLDER.glob(\"*.h5\")):\n",
-    "    if filename.stem[-3:] not in [\"100\", \"140\", \"180\"]:\n",
-    "        print(\"Skip\")\n",
-    "        continue\n",
     "    v = f\"u_alpha={filename.stem[-3:]}\"\n",
-    "    plots_2D.videoPxPyDistribution(info, species=Species.PROTON, filename=filename, save=True, label=v)"
+    "    plots_2D.videoPxPyDistribution(info, species=Species.ALPHA, filename=filename, save=True, label=v)"
    ]
   },
   {
@@ -766,9 +829,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with h5py.File(FOLDER_1D / \"proton-alpha-instability-1D.h5\") as f:\n",
+    "    print(f[\"Grid/grid\"].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times = [0.0, 30.0, 40.0, 50.0, 80.0]\n",
+    "species = Species.PROTON\n",
+    "general.momentumDistributionComparison(\n",
+    "    info, species, Distribution.X_PX,\n",
+    "    FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
+    "    times, legend_loc=(0.2, 0.05),\n",
+    "    labels=[int(t) for t in times]\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plots_1D.electricFieldOverSpaceAndTime(\n",
     "    filename=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
-    "    info=info, save=False\n",
+    "    info=info, save=True\n",
     ")\n",
     "plt.show()"
    ]
@@ -779,23 +869,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots_1D.averageTemperature3DOverTime(\n",
-    "    filename=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
-    "    info=info, save=save\n",
-    ")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for s in Species:\n",
-    "    plots_1D.velocityDistributionOverTime(\n",
-    "        filename=PARTICLE_VARIATION_FOLDER / \"particles_4192/rep_0.h5\", #FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
-    "        info=info, species=s, save=save\n",
+    "for species in Species:\n",
+    "    plots_1D.avgTemperatureXOverTime(\n",
+    "        filename=PARTICLE_VARIATION_FOLDER / \"particles_8192/rep_0.h5\",\n",
+    "        info=info, species=species, save=True\n",
     "    )\n",
     "plt.show()"
    ]
@@ -806,9 +883,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from plots.settings import FIGURE_FULL_SIZE\n",
+    "\n",
+    "plots_1D.velocityDistributionOverTimeCombined(PARTICLE_VARIATION_FOLDER / \"particles_8192/rep_0.h5\", info, save=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plots_1D.energyEFieldOverTime(\n",
-    "    filename=FOLDER_1D / \"proton-alpha-instability-1D.h5\",\n",
-    "    info=info, save=save\n",
+    "    filename=PARTICLE_VARIATION_FOLDER / \"particles_8192/rep_0.h5\",\n",
+    "    info=info, save=False\n",
     ")\n",
     "plt.show()"
    ]
@@ -818,20 +906,6 @@
    "metadata": {},
    "source": [
     "## Particle variation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variation_folder = PARTICLE_VARIATION_FOLDER\n",
-    "for particle_folder in sorted(variation_folder.glob(\"particles_*\")):\n",
-    "    plots_1D.multiElectricFieldEnergyOverTime(\n",
-    "        particle_folder, info, save=save,\n",
-    "        identifer=f\"particles_per_cell_{int(particle_folder.stem[-4:])}\"\n",
-    "    )"
    ]
   },
   {
